{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 24,
  "lineage": "f40001f6-75b7-9e59-9c54-e2fcffada9bf",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:network-acl/acl-07930fc88c20fe052",
            "default_network_acl_id": "acl-07930fc88c20fe052",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07930fc88c20fe052",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "230020307145",
            "subnet_ids": [
              "subnet-0082b29db67e64a34",
              "subnet-045498ab56c29dc45",
              "subnet-0618fae950cdc87bc",
              "subnet-0b6b515f62dcf91c7",
              "subnet-0ce8efb41c0f7fa3d",
              "subnet-0f915e254a96c4217"
            ],
            "tags": {
              "Name": "Eks_vpc-default",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc-default",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:route-table/rtb-0fb840d934d82c593",
            "default_route_table_id": "rtb-0fb840d934d82c593",
            "id": "rtb-0fb840d934d82c593",
            "owner_id": "230020307145",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Eks_vpc-default",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc-default",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:security-group/sg-0e6e06416bb3c0882",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e6e06416bb3c0882",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "230020307145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eks_vpc-default",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc-default",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059abd5ab2c2e62d5",
            "domain": "vpc",
            "id": "eipalloc-059abd5ab2c2e62d5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-243-150-190.compute-1.amazonaws.com",
            "public_ip": "54.243.150.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Eks_vpc-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:internet-gateway/igw-0f8453c123232ce15",
            "id": "igw-0f8453c123232ce15",
            "owner_id": "230020307145",
            "tags": {
              "Name": "Eks_vpc",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059abd5ab2c2e62d5",
            "association_id": "eipassoc-079530b71ab48f7a2",
            "connectivity_type": "public",
            "id": "nat-03acadde863107e41",
            "network_interface_id": "eni-04a29c845634ca632",
            "private_ip": "10.0.10.55",
            "public_ip": "54.243.150.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0082b29db67e64a34",
            "tags": {
              "Name": "Eks_vpc-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a0f10355457f3241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03acadde863107e41",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a0f10355457f324",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f8453c123232ce15",
            "id": "r-rtb-0ff7275d3db4f0dad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff7275d3db4f0dad",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:route-table/rtb-09a0f10355457f324",
            "id": "rtb-09a0f10355457f324",
            "owner_id": "230020307145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eks_vpc-private",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc-private",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:route-table/rtb-0ff7275d3db4f0dad",
            "id": "rtb-0ff7275d3db4f0dad",
            "owner_id": "230020307145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eks_vpc-public",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc-public",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faa766256b4a40ad",
            "route_table_id": "rtb-09a0f10355457f324",
            "subnet_id": "subnet-0ce8efb41c0f7fa3d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9d9dda38fe3b1c4",
            "route_table_id": "rtb-09a0f10355457f324",
            "subnet_id": "subnet-0f915e254a96c4217"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7176d627d65de5a",
            "route_table_id": "rtb-09a0f10355457f324",
            "subnet_id": "subnet-0618fae950cdc87bc"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b80d19f7b8fb5aa",
            "route_table_id": "rtb-0ff7275d3db4f0dad",
            "subnet_id": "subnet-0082b29db67e64a34"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005ab2148eb309412",
            "route_table_id": "rtb-0ff7275d3db4f0dad",
            "subnet_id": "subnet-045498ab56c29dc45"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed7282e022318b9",
            "route_table_id": "rtb-0ff7275d3db4f0dad",
            "subnet_id": "subnet-0b6b515f62dcf91c7"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-0ce8efb41c0f7fa3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce8efb41c0f7fa3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eks_vpc-private-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Eks_vpc-private-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-0f915e254a96c4217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f915e254a96c4217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eks_vpc-private-us-east-1b",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Eks_vpc-private-us-east-1b",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-0618fae950cdc87bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0618fae950cdc87bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eks_vpc-private-us-east-1c",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Eks_vpc-private-us-east-1c",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-0082b29db67e64a34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0082b29db67e64a34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eks_vpc-public-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Eks_vpc-public-us-east-1a",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-045498ab56c29dc45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045498ab56c29dc45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eks_vpc-public-us-east-1b",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Eks_vpc-public-us-east-1b",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:subnet/subnet-0b6b515f62dcf91c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6b515f62dcf91c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230020307145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Eks_vpc-public-us-east-1c",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Eks_vpc-public-us-east-1c",
              "kubernetes.io/cluster/test-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05e3c989b6167635a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230020307145:vpc/vpc-05e3c989b6167635a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07930fc88c20fe052",
            "default_route_table_id": "rtb-0fb840d934d82c593",
            "default_security_group_id": "sg-0e6e06416bb3c0882",
            "dhcp_options_id": "dopt-0845c17760b1fad64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05e3c989b6167635a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb840d934d82c593",
            "owner_id": "230020307145",
            "tags": {
              "Name": "Eks_vpc",
              "kubernetes.io/cluster/test-cluster": "shared"
            },
            "tags_all": {
              "Name": "Eks_vpc",
              "kubernetes.io/cluster/test-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}